@@ -57,6 +57,7 @@ from .paraguay import Paraguay, PY, PRY
 from .peru import Peru, PE, PER
 from .poland import Poland, Polish, PL, POL
 from .portugal import Portugal, PT, PRT, PortugalExt, PTE
+from .romania import Romania, RO, ROU
 from .russia import Russia, RU, RUS
 from .serbia import Serbia, RS, SRB
 from .singapore import Singapore, SG, SGP
