@@ -5,6 +5,7 @@ Released ????? ??, ????
 
 - Support for Burundi (bmwachajr)
 - Support for Latvia (rolandinsh)
+- Support for Romania (dorianm)
 - Spain fix (dr-p)
 - Netherlands fix (RooieRakkert)
 - Switzerland fixes (cgrigis)
